# argparse_vs_click

./: .gitignore  demo.sh  pyproject.toml
.github/workflows/: ci.yml
src/argparse_vs_click/: git_argparse.py  git_click.py
