[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argparse_vs_click"
version = "0.0.1"
dependencies = ["click"]

[project.optional-dependencies]
dev = ["black", "isort", "mypy"]

[project.scripts]
git-click = "argparse_vs_click.git_click:git"
git-argparse = "argparse_vs_click.git_argparse:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
strict = true
